--- a/app.json
+++ b/app.json
@@ -7,8 +7,8 @@
     "icon": "./assets/logo.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "resizeMode": "contain"
+
     },
     "updates": {
       "fallbackToCacheTimeout": 0
