--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "app-loading": "^0.0.51",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
+    "expo-checkbox": "~1.0.3",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "^8.6.8",
